--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.3",
+    "@zxing/browser": "^0.1.5",
     "date-fns": "^3.0.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
